Character wrapper class methods